@@ -1,3 +1,3 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms128m -Xmx1336m
+org.gradle.jvmargs=-Xms128m -Xmx1024m
 org.gradle.configureondemand=true
