@@ -72,7 +72,7 @@ public class FlexUiUAT extends BasicGameScreen implements GameResizeListener {
 	@Override
 	public void initialise(GameContainer gc) {
 		uiContainer = new UiContainer(gc, assetManager);
-		uiContainer.setKeyboardNavigationEnabled(UATApplication.USE_KEYBOARD_NAVIGATION);
+		uiContainer.setNavigationMode(UATApplication.NAVIGATION_MODE);
 		gc.addResizeListener(this);
 		initialiseUi();
 		
